adicionado barra de pesquisa

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <div id="main">
     <h1>Previsão do Tempo</h1>
 
+    <div class="barradepesquisa">
+      <input type="text" placeholder="Insira aqui o nome da cidade">
+      <button>
+          <img src="imagens/iconpesquisa.png" alt="Ícone de pesquisa">
+      </button>
+  </div>
+
     <section>
       <div>
         <h3>Cidades</h3>
